# isoxya-api

./: .dockerignore  .dockerrepo  .gitignore  .gitmodules  .stylish-haskell.yaml  Dockerfile  LICENSE  LICENSE.dependencies.txt  README.md  cabal.config  cabal.project.freeze  docker-compose.yml  docker-compose.yml.example  isoxya-api.cabal  isx-ce.cabal  schema.sql
misc/eg/latest/: docker-compose.init.sh  docker-compose.yml
misc/eg/stable/: docker-compose.yml
misc/eg/testing/: docker-compose.yml
misc/eg/unstable/: .env  docker-compose.yml
misc/streams/stable/: docker-compose.yml
misc/streams/testing/: docker-compose.yml
misc/streams/unstable/: docker-compose.yml
pkg/: .dockerignore  Dockerfile
src/ISX/CE/: API.hs  Crwl.hs  DB.hs  Msg.hs  Proc.hs  Strm.hs  URI.hs
src/ISX/CE/API/: Auth.hs  Core.hs  Find.hs  Href.hs  Init.hs  Resource.hs  Types.hs
src/ISX/CE/API/Zone/: Apex.hs  Crwl.hs  PlugProc.hs  PlugStrm.hs  Site.hs
src/ISX/CE/Crwl/: Processor.hs
src/ISX/CE/DB/: Migration.hs  Query.hs  Types.hs  URLPage.hs
src/ISX/CE/Msg/: Query.hs  Types.hs
src/ISX/CE/Proc/: Processor.hs
src/ISX/CE/Strm/: Processor.hs
src/Isoxya/: API.hs  Crawler.hs  DB.hs  Msg.hs  Processor.hs  Streamer.hs  URI.hs
src/Isoxya/API/: Auth.hs  Core.hs  Find.hs  Href.hs  Init.hs  Resource.hs  Type.hs
src/Isoxya/API/Endpoint/: Apex.hs  Crawl.hs  Processor.hs  Site.hs  Streamer.hs
src/Isoxya/Crawler/: Processor.hs
src/Isoxya/DB/: Migration.hs  Query.hs  Type.hs  URLPage.hs
src/Isoxya/Msg/: Query.hs  Type.hs
src/Isoxya/Processor/: Processor.hs
src/Isoxya/Streamer/: Processor.hs
test/ISX/CE/API/: Test.hs
test/ISX/CE/API/Zone/: ApexSpec.hs
test/Isoxya/API/: Test.hs
test/Isoxya/API/Endpoint/: ApexSpec.hs
