cabal-version:          3.0
name:                   isoxya-api
version:                0.0.0
synopsis:               Isoxya API
license:                BSD-3-Clause
author:                 Nic Williams <tp@tiredpixel.com>
maintainer:             Nic Williams <tp@tiredpixel.com>
build-type:             Simple
--------------------------------------------------------------------------------
common common-properties
    build-depends:
        base                            ==  4.13.*,
        relude,
    mixins:
        base                            hiding (Prelude),
        relude                          (Relude as Prelude)
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall
        -ddump-minimal-imports
--------------------------------------------------------------------------------
library lib-common
    import:             common-properties
    exposed-modules:
        TiredPixel.Common.Cursor
        TiredPixel.Common.Isoxya.PlugProc
        TiredPixel.Common.Isoxya.PlugStrm
        TiredPixel.Common.Log
        TiredPixel.Common.Net
        TiredPixel.Common.SQLite.Conn
        TiredPixel.Common.SQLite.Ext.Hash
        TiredPixel.Common.SQLite.Ext.URI
        TiredPixel.Common.SQLite.Ext.UUID
        TiredPixel.Common.SQLite.Meta
        TiredPixel.Common.SQLite.Query
        TiredPixel.Common.Snap.CoreUtils
        TiredPixel.Common.Snap.Main
        TiredPixel.Common.URI
        TiredPixel.Common.UUID
    build-depends:
        aeson,
        base64-bytestring,
        bytestring,
        conduit,
        conduit-extra,
        cryptonite,
        direct-sqlite,
        http-conduit,
        http-types,
        memory,
        network-uri,
        regex-compat,
        resourcet,
        safe,
        snap-core,
        snap-extras,
        snap-server,
        sqlite-simple,
        time,
        tinylog,
        unix,
        unordered-containers,
        uuid,
    hs-source-dirs:
        lib/common/src
--------------------------------------------------------------------------------
library lib-isoxya-api
    import:             common-properties
    exposed-modules:
        Isoxya.API
        Isoxya.API.Core
        Isoxya.Crwl
        Isoxya.DB.Migration
        Isoxya.Msg
        Isoxya.Proc
        Isoxya.Strm
    other-modules:
        Paths_isoxya_api
        --
        Isoxya.API.Auth
        Isoxya.API.Find
        Isoxya.API.Href
        Isoxya.API.Init
        Isoxya.API.Resource
        Isoxya.API.Types
        Isoxya.API.Zone.Apex
        Isoxya.API.Zone.Crwl
        Isoxya.API.Zone.PlugProc
        Isoxya.API.Zone.PlugStrm
        Isoxya.API.Zone.Site
        Isoxya.Crwl.Processor
        Isoxya.DB
        Isoxya.DB.Query
        Isoxya.DB.Types
        Isoxya.DB.URLPage
        Isoxya.Msg.Query
        Isoxya.Msg.Types
        Isoxya.Proc.Processor
        Isoxya.Strm.Processor
        Isoxya.URI
    build-depends:
        lib-common,
        --
        aeson,
        base64-bytestring,
        bytestring,
        case-insensitive,
        containers,
        cryptonite,
        direct-sqlite,
        http-conduit,
        http-types,
        lens,
        lens-aeson,
        network-uri,
        regex-compat,
        snap,
        snap-core,
        snap-extras,
        sqlite-simple,
        text,
        time,
        uuid,
    hs-source-dirs:
        src
--------------------------------------------------------------------------------
executable isoxya-api
    import:             common-properties
    main-is:            API.hs
    other-modules:
        Paths_isoxya_api
    build-depends:
        lib-common,
        lib-isoxya-api,
        --
        lens,
        snap,
    hs-source-dirs:
        src/Isoxya/Bin
--------------------------------------------------------------------------------
library lib-common-test
    import:             common-properties
    exposed-modules:
        TiredPixel.Common.Snap.Test
    other-modules:
        TiredPixel.Common.Snap.TestUtils
    build-depends:
        aeson,
        base64-bytestring,
        bytestring,
        containers,
        directory,
        filepath,
        hspec                           ==  2.*,
        hspec-core,
        hspec-snap,
        http-link-header,
        lens,
        lens-aeson,
        mtl,
        network-uri,
        process,
        snap-core,
        text,
        unordered-containers,
        vector,
    hs-source-dirs:
        lib/common/test
--------------------------------------------------------------------------------
test-suite test-isoxya-api
    import:             common-properties
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:
        Isoxya.API.Test
        Isoxya.API.Zone.ApexSpec
    build-depends:
        lib-common,
        lib-common-test,
        lib-isoxya-api,
        --
        hspec                           ==  2.*,
        snap,
    default-extensions:
        NoImplicitPrelude
    hs-source-dirs:
        test
    build-tool-depends:
        hspec-discover:hspec-discover   ==  2.*
