cabal-version:          3.0
name:                   isoxya-api
version:                0.0.0
synopsis:               Isoxya API
license:                BSD-3-Clause
author:                 Nic Williams <tp@tiredpixel.com>
maintainer:             Nic Williams <tp@tiredpixel.com>
--------------------------------------------------------------------------------
common common-properties
    build-depends:
        base                            ^>= 4.14.3.0,
        relude
    mixins:
        base                            hiding (Prelude),
        relude                          (Relude as Prelude)
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall
        -Werror
        -Wunused-packages
--------------------------------------------------------------------------------
library lib-common
    import:             common-properties
    exposed-modules:
        TiredPixel.Common.Cursor
        TiredPixel.Common.Isoxya.Processor
        TiredPixel.Common.Isoxya.Streamer
        TiredPixel.Common.Log
        TiredPixel.Common.Net
        TiredPixel.Common.SQLite.Conn
        TiredPixel.Common.SQLite.Ext.Hash
        TiredPixel.Common.SQLite.Ext.URI
        TiredPixel.Common.SQLite.Ext.UUID
        TiredPixel.Common.SQLite.Meta
        TiredPixel.Common.SQLite.Query
        TiredPixel.Common.Snap.CoreUtil
        TiredPixel.Common.Snap.Main
        TiredPixel.Common.URI
        TiredPixel.Common.UUID
    build-depends:
        aeson,
        base64-bytestring,
        bytestring,
        conduit,
        conduit-extra,
        cryptonite,
        direct-sqlite,
        http-conduit,
        http-types,
        memory,
        network-uri,
        regex-compat,
        resourcet,
        safe,
        snap-core,
        snap-extras,
        snap-server,
        sqlite-simple,
        time,
        tinylog,
        unix,
        unordered-containers,
        uuid,
    hs-source-dirs:
        lib/common/src
--------------------------------------------------------------------------------
library lib-isoxya-api
    import:             common-properties
    exposed-modules:
        Isoxya.API
        Isoxya.API.Core
        Isoxya.Crawler
        Isoxya.DB.Migration
        Isoxya.Msg
        Isoxya.Processor
        Isoxya.Streamer
    other-modules:
        Isoxya.API.Endpoint.Apex
        Isoxya.API.Endpoint.Crawl
        Isoxya.API.Endpoint.Processor
        Isoxya.API.Endpoint.Site
        Isoxya.API.Endpoint.Streamer
        Isoxya.API.Find
        Isoxya.API.Href
        Isoxya.API.Init
        Isoxya.API.Resource
        Isoxya.API.Type
        Isoxya.Crawler.Processor
        Isoxya.DB
        Isoxya.DB.Query
        Isoxya.DB.Type
        Isoxya.DB.URLPage
        Isoxya.Msg.Query
        Isoxya.Msg.Type
        Isoxya.Processor.Processor
        Isoxya.Streamer.Processor
        Paths_isoxya_api
    build-depends:
        aeson,
        base64-bytestring,
        bytestring,
        case-insensitive,
        containers,
        cryptonite,
        direct-sqlite,
        http-conduit,
        http-types,
        lens,
        lens-aeson,
        lib-common,
        network-uri,
        regex-compat,
        snap,
        snap-core,
        snap-extras,
        sqlite-simple,
        text,
        time,
        uuid,
    hs-source-dirs:
        src
--------------------------------------------------------------------------------
executable isoxya-api
    import:             common-properties
    main-is:            API.hs
    other-modules:
        Paths_isoxya_api
    build-depends:
        lens,
        lib-common,
        lib-isoxya-api,
        snap,
    hs-source-dirs:
        src/Isoxya/Bin
--------------------------------------------------------------------------------
library lib-common-test
    import:             common-properties
    exposed-modules:
        TiredPixel.Common.Snap.Test
    other-modules:
        TiredPixel.Common.Snap.TestUtil
    build-depends:
        aeson,
        base64-bytestring,
        bytestring,
        containers,
        directory,
        filepath,
        hspec                           ==  2.*,
        hspec-core,
        hspec-snap,
        http-link-header,
        lens,
        lens-aeson,
        mtl,
        network-uri,
        process,
        snap-core,
        text,
        unordered-containers,
        vector,
    hs-source-dirs:
        lib/common/test
--------------------------------------------------------------------------------
test-suite test-isoxya-api
    import:             common-properties
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:
        Isoxya.API.Endpoint.ApexSpec
        Isoxya.API.Test
    build-depends:
        hspec                           ==  2.*,
        lib-common,
        lib-common-test,
        lib-isoxya-api,
        snap,
    default-extensions:
        NoImplicitPrelude
    hs-source-dirs:
        test
    build-tool-depends:
        hspec-discover:hspec-discover   ==  2.*
